--- a/zwave-js-server/Dockerfile
+++ b/zwave-js-server/Dockerfile
@@ -6,8 +6,7 @@ WORKDIR /usr/src/app
 RUN apt-get update && \
     apt-get -y install curl unzip jq && \
     npm install -g typescript && \
-    npm install -g ts-node && \
-    npm install zwave-js/zwave-js-server#master
+    npm install -g ts-node
 
 EXPOSE 3000
 
