--- a/zwavejs2mqtt/config.json
+++ b/zwavejs2mqtt/config.json
@@ -1,6 +1,6 @@
 {
   "name": "Z-Wave JS 2 MQTT",
-  "version": "1.0.0-rc.1",
+  "version": "1.0.0-rc.1.d64ab57",
   "slug": "zwavejs2mqtt",
   "description": "Fully configurable Zwave to MQTT Gateway and Control Panel.",
   "url": "https://zwave-js.github.io/zwavejs2mqtt",
